# MLOps_project

./: .gitignore  .pre-commit-config.yaml  models.py  pyproject.toml  utils.py
mlops-project/: models.py
mlopsproject/: datasets.py  metrics.py  models.py  utils.py
