[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.0"
jupyter = "^1.0.0"
torch = "^2.0.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
